--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -1,6 +1,9 @@
 .nav {
     padding: 20px;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
     &__link {
         color: rgb(233, 193, 17);
         padding: 10px;
