--- a/src/views/HTML.scss
+++ b/src/views/HTML.scss
@@ -1,7 +1,8 @@
 .html {
-  padding: 50px;
+  padding: 5%;
   box-shadow: 0 0 10px 5px #c4c4c4;
   border-radius: 15px;
+  min-width: 300px;
   &__title {
     font-size: 28px;
     margin-bottom: 20px;
@@ -11,5 +12,12 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+  }
+}
+@media screen and (max-width: 425px) {
+  .html {
+    &__title {
+      font-size: 24px;
+    }
   }
 }
